# learn-opengl-rs

./: Cargo.toml
src/: camera.rs  default.frag  default.vert  main.rs  model.rs  shader_program.rs  texture.rs
src/shaders/: basic.frag  basic.geom  basic.vert  default.frag  default.vert  envmap.frag  envmap.vert  instanced.vert  main.frag  main.vert  normal_visualizer.geom  normal_visualizer.vert  screen.frag  skybox.frag  skybox.vert
