[package]
name = "learn-opengl"
version = "0.1.0"
authors = ["Thomas Lent <tcl293@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
gl = "0.14.0"
glutin = "0.24.1"
winit = "0.22.2"
image = "0.23.4"
